# rosbag_to_las

./: .gitignore  DOCUMENTATION_INDEX.md  Dockerfile  EXPRESS_MODE_AND_GPS_FIX.md  GPS_TIME_FIX_README.md  INSTALL.md  README.md  SLAM_DOCUMENTATION.md  SLAM_IMPLEMENTATION_SUMMARY.md  TRANSFORM_README.md  bag2las.py  bag2las_transform.py  camera_frames_debug.py  debug.md  docker-compose.yml  extract_camera_positions.py  install.bat  install.sh  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.txt  setup.py  test_new_features.py  test_optimization.py
doc/: CAMERA_FRAMES_DEBUG_README.md  CAMERA_POSITIONS_EXTRACTOR.md  CAMERA_QUICK_START.md  CHANGES.md  CHANGES_SUMMARY.md  COORDINATE_TRANSFORM_FIXES.md  FINAL_REPORT.md  GIT_CLEANUP_GUIDE.md  OPTIMIZATION_FIXES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  SLAM_USER_GUIDE.md  VISUAL_EXAMPLES.md
